@@ -1,7 +1,7 @@
 {
   "name":"recursive-blueprints",
   "author":"Doc, justarandomgeek, DaveMcW",
-  "version":"1.2.3",
+  "version":"1.2.4",
   "title":"Recursive Blueprints",
   "homepage":"",
   "description":"Automate blueprints to build a self-expanding factory.",
